# Gardenary-be

./: .env  Cargo.toml
src/: config.rs  main.rs
src/dtos/: auth_dto.rs  mod.rs  plant_dto.rs
src/handlers/: auth_handler.rs  mod.rs  plant_handler.rs
src/models/: mod.rs  plant.rs  user.rs
src/repositories/: auth_postgres.rs  auth_supabase.rs  mod.rs  plant_postgres.rs  plant_supabase.rs
src/services/: auth_service.rs  mod.rs  plant_service.rs
